tests/sema/negative/invalid_assignment_target.nv
fn main() : void {
    1 = 2;
    return;
}
